<resources>
    <string name="app_name">parkrun</string>

    <!-- Strings related to login and register -->
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="athleteId">Athlete ID:</string>
    <string name="password">Password:</string>
    <string name="btnSignUp">Sign up</string>
    <string name="password_hint_confirm">Password Confirm</string>
    <string name="password_hint">Password</string>
    <string name="email_registerHint">Email</string>
    <string name="last_name_registerHint">Last Name</string>
    <string name="first_name_registerHint">First Name</string>
    <string name="parkrun_logo">parkrun logo</string>
    <string name="parkrun_title">parkrun title</string>

    <!-- Strings related to main and navigation -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="navigation_header">Header Navigation</string>

    <!-- String related to fragments -->
    <string name="home">Home</string>
    <string name="volunteer">Volunteer</string>
    <string name="results">Results</string>
    <string name="parkrun_info">parkrun Info</string>
    <string name="my_club">My Club</string>
    <string name="my_parkrun">My parkrun</string>
    <string name="news">News</string>
    <string name="photos">Photos</string>
    <string name="you">You</string>
    <string name="friends">Friends</string>
    <string name="other">Other</string>
    <string name="sponsors">Sponsors</string>
    <string name="start_new_event">Start new event</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="checkIn">Check-in</string>
    <string name="checkOut">Check-out</string>
</resources>